Added websocket connection to frontend Added kafka connection to backend Added UI for displaying calculation results

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,8 @@
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-resourceroots='{"kafka-webapp": ""}'>
 		</script>
+		<script src="/webjars/sockjs-client/sockjs.min.js"></script>
+		<script src="/webjars/stomp-websocket/stomp.min.js"></script>
 		<script>
 			sap.ui.getCore().attachInit(() => {
 				new sap.ui.core.ComponentContainer({
